# CTB_to_CSV

./: .gitattributes  .gitignore  README.md  ctb_gui.bat  ctb_gui.spec  pyproject.toml
samples/: 2026-06-30 13-12-57.html  S10 Generico.ctb  S10_Generico_report.html
src/ctb_csv/: __init__.py  __main__.py  cli.py  csv_handler.py  ctb_parser.py  gui.py  llm_grouper.py  reporter.py  validator.py
tests/: test_roundtrip.py
