[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ctb-csv"
version = "0.1.0"
description = "Convert AutoCAD CTB plot style tables to/from CSV"
requires-python = ">=3.10"
dependencies = [
    "ezdxf>=1.3",
    "click>=8.1",
]

[project.scripts]
ctb2csv = "ctb_csv.cli:ctb2csv"
csv2ctb = "ctb_csv.cli:csv2ctb"
validate = "ctb_csv.cli:validate_csv"

[tool.setuptools.packages.find]
where = ["src"]
