[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctb-csv"
version = "0.1.0"
description = "Convert AutoCAD CTB plot style tables to/from CSV"
requires-python = ">=3.10"
dependencies = [
    "ezdxf>=1.3",
    "click>=8.1",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
pdf = ["weasyprint"]
all = ["anthropic>=0.40", "weasyprint"]

[project.scripts]
ctb-gui  = "ctb_csv.gui:main"
ctb2csv  = "ctb_csv.cli:ctb2csv"
csv2ctb  = "ctb_csv.cli:csv2ctb"
validate = "ctb_csv.cli:validate_csv"

[tool.setuptools.packages.find]
where = ["src"]
